# pythonProjectDRF

./: .env_sample  .gitignore  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
habit/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
